adding css and setting up grunt

--- a/public/assets/tpl/conditions.html
+++ b/public/assets/tpl/conditions.html
@@ -1,13 +1,13 @@
-<article id='conditionsContainer'>
-  <article id='location'>For <%= city %></article>
+<article id="conditionsContainer">
+  <article id="location">For <%= city %></article>
   <h2>Today</h2>
-  <section id='conditionsMain'>
-    <img src='http://cloud.keepiteasy.net/images/icons/<%= icon %>.gif'>
-      <h3 id='currentTemp'><%= temp %> K</h3>
+  <section id="conditionsMain">
+    <img src="http://cloud.keepiteasy.net/images/icons/<%= icon %>.gif">
+      <h3 id="currentTemp"><%= temp %> K</h3>
       <span>(<%= temp_c %>° C)</span>
     </img>
   </section>
-  <section id='conditionsDetails'>
+  <section id="conditionsDetails">
     <article>
       <p>Feels Like</p>
       <p><%= feelslike %>° C</p>
@@ -29,5 +29,5 @@
       <p><%= precip %>mm</p>
     </article>
   </section>
-  <p id='conditionsTime'><%= time %>s</p>
+  <p id="conditionsTime"><%= time %>s</p>
 </article>
