--- a/public/assets/tpl/app.html
+++ b/public/assets/tpl/app.html
@@ -1,8 +1,8 @@
-<div id='main'>
-  <a href='https://play.google.com/store/apps/details?id=com.keepiteasy.easyweather' style='display: inline-block; cursor: pointer;' target='_blank'>
-    <img alt='Android app on Google Play' src='https://developer.android.com/images/brand/en_app_rgb_wo_45.png'>
+<div id="main">
+  <a href="https://play.google.com/store/apps/details?id=com.keepiteasy.easyweather" style="display: inline-block; cursor: pointer;" target="_blank">
+    <img alt="Android app on Google Play" src="https://developer.android.com/images/brand/en_app_rgb_wo_45.png">
   </a>
-  <h1 id='siteHeader'>Easy Weather</h1>
-  <section id='content'></section>
-  <div style='clear: both;'></div>
+  <h1 id="siteHeader">Easy Weather</h1>
+  <section id="content"></section>
+  <div style="clear: both;"></div>
 </div>
