--- a/public/assets/tpl/forecast.html
+++ b/public/assets/tpl/forecast.html
@@ -1,5 +1,5 @@
 <header>
   <h2>Forecast</h2>
 </header>
-<article id='forecastContainer'></article>
-<div style='clear: both; '></div>
+<article id="forecastContainer"></article>
+<div style="clear: both; "></div>
