--- a/public/assets/tpl/forecastDay.html
+++ b/public/assets/tpl/forecastDay.html
@@ -1,6 +1,6 @@
 <div>
   <p><%= day %></p>
-  <img src='http://cloud.keepiteasy.net/images/icons/<%= icon%>.gif'>
+  <img src="http://cloud.keepiteasy.net/images/icons/<%= icon%>.gif">
     <p><%= text %></p>
   </img>
 </div>
