--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
       <script src='https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false&amp;libraries=weather' type='text/javascript'></script>
       <script src='http://cloud.keepiteasy.net/libs/underscore-min.js' type='text/javascript'></script>
       <script src='http://cloud.keepiteasy.net/libs/backbone-min.js' type='text/javascript'></script>
-      <script src='assets/js/init.js' type='text/javascript'></script>
-      <script src='assets/js/router.js' type='text/javascript'></script>
-      <script src='assets/js/models/app.js' type='text/javascript'></script>
-      <script src='assets/js/models/forecast.js' type='text/javascript'></script>
-      <script src='assets/js/models/conditions.js' type='text/javascript'></script>
-      <script src='assets/js/collections/forecast.js' type='text/javascript'></script>
-      <script src='assets/js/collections/conditions.js' type='text/javascript'></script>
-      <script src='assets/js/views/loading.js' type='text/javascript'></script>
-      <script src='assets/js/views/map.js' type='text/javascript'></script>
-      <script src='assets/js/views/conditions.js' type='text/javascript'></script>
-      <script src='assets/js/views/forecast.js' type='text/javascript'></script>
-      <script src='assets/js/views/app.js' type='text/javascript'></script>
+      <script src='./assets/js/init.js' type='text/javascript'></script>
+      <script src='./assets/js/router.js' type='text/javascript'></script>
+      <script src='./assets/js/models/app.js' type='text/javascript'></script>
+      <script src='./assets/js/models/forecast.js' type='text/javascript'></script>
+      <script src='./assets/js/models/conditions.js' type='text/javascript'></script>
+      <script src='./assets/js/collections/forecast.js' type='text/javascript'></script>
+      <script src='./assets/js/collections/conditions.js' type='text/javascript'></script>
+      <script src='./assets/js/views/loading.js' type='text/javascript'></script>
+      <script src='./assets/js/views/map.js' type='text/javascript'></script>
+      <script src='./assets/js/views/conditions.js' type='text/javascript'></script>
+      <script src='./assets/js/views/forecast.js' type='text/javascript'></script>
+      <script src='./assets/js/views/app.js' type='text/javascript'></script>
       <script>
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-33924145-1']);
