getting rid of the actual tool as we are having issues running it based on the custom url setup of github

--- a/index.html
+++ b/index.html
@@ -1,40 +1,69 @@
 <!DOCTYPE html>
-<html xmlns='http://www.w3.org/1999/xhtml'>
+<html>
   <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
-    <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport'>
-      <title>EasyWeather</title>
-      <link href='http://cloud.keepiteasy.net/css/fluid.css' media='screen' rel='stylesheet' type='text/css'>
-      <script src='http://cloud.keepiteasy.net/libs/modernizr.custom.89661.js' type='text/javascript'></script>
-      <script src='http://cloud.keepiteasy.net/libs/json2.js' type='text/javascript'></script>
-      <script src='http://cloud.keepiteasy.net/libs/jquery.js' type='text/javascript'></script>
-      <script src='https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false&amp;libraries=weather' type='text/javascript'></script>
-      <script src='http://cloud.keepiteasy.net/libs/underscore-min.js' type='text/javascript'></script>
-      <script src='http://cloud.keepiteasy.net/libs/backbone-min.js' type='text/javascript'></script>
-      <script src='./assets/js/init.js' type='text/javascript'></script>
-      <script src='./assets/js/router.js' type='text/javascript'></script>
-      <script src='./assets/js/models/app.js' type='text/javascript'></script>
-      <script src='./assets/js/models/forecast.js' type='text/javascript'></script>
-      <script src='./assets/js/models/conditions.js' type='text/javascript'></script>
-      <script src='./assets/js/collections/forecast.js' type='text/javascript'></script>
-      <script src='./assets/js/collections/conditions.js' type='text/javascript'></script>
-      <script src='./assets/js/views/loading.js' type='text/javascript'></script>
-      <script src='./assets/js/views/map.js' type='text/javascript'></script>
-      <script src='./assets/js/views/conditions.js' type='text/javascript'></script>
-      <script src='./assets/js/views/forecast.js' type='text/javascript'></script>
-      <script src='./assets/js/views/app.js' type='text/javascript'></script>
-      <script>
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-33924145-1']);
-        _gaq.push(['_trackPageview']);
-        
-        (function() {
-          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
-      </script>
-    </meta>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+
+    <title>Easy-weather by obihann</title>
   </head>
-  <body></body>
+
+  <body>
+
+    <header>
+      <div class="container">
+        <h1>Easy-weather</h1>
+        <h2>A simple weather app taking advantage of HTML5 geolocation to provide current weather conditions and forecasts. Created with Backbone and written in HAML and CoffeeScript.</h2>
+
+        <section id="downloads">
+          <a href="https://github.com/obihann/Easy-Weather/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/obihann/Easy-Weather/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/obihann/Easy-Weather" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
+
+    <div class="container">
+      <section id="main_content">
+        <h1>
+<a name="view-it-here" class="anchor" href="#view-it-here"><span class="octicon octicon-link"></span></a><a href="http://weather.keepiteasy.net/">View it here!</a>
+</h1>
+
+<p><img src="http://i.imgur.com/lHm7wSQ.jpg?1" alt="Easy Weather" title="Easy Weather"></p>
+
+<h2>
+<a name="table-of-contents" class="anchor" href="#table-of-contents"><span class="octicon octicon-link"></span></a>Table of Contents</h2>
+
+<ul>
+<li><a href="#download">Download</a></li>
+<li><a href="#tools">Tools</a></li>
+<li><a href="#license">License</a></li>
+</ul><h2>
+<a name="download" class="anchor" href="#download"><span class="octicon octicon-link"></span></a>Download</h2>
+
+<p>The latest stable release is <a href="https://github.com/obihann/Easy-Weather/archive/1.0.0.tar.gz">Version 1</a>.</p>
+
+<p>SHA1: 861b2c9521e9985b45e7d77fe8a1df6e54161ab7</p>
+
+<h2>
+<a name="tools" class="anchor" href="#tools"><span class="octicon octicon-link"></span></a>Tools</h2>
+
+<ul>
+<li><a href="http://backbonejs.org/">Backbone</a></li>
+<li><a href="http://haml.info/">HAML</a></li>
+<li><a href="http://haml.info/">CoffeeScript</a></li>
+</ul><h2>
+<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
+
+<p>This tool is protected by the <a href="http://www.gnu.org/licenses/gpl-2.0.html">GNU General Public License v2</a>.</p>
+
+<p>Copyright <a href="http://jeffreyhann.ca/">Jeffrey Hann</a> 2013</p>
+      </section>
+    </div>
+
+    
+  </body>
 </html>
